# WES2025_hackathon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.env  doxyfile.conf  kconfigs.in  kconfigs_projbuild.in  partitions.csv  project_init.sh  sdkconfig.defaults
.github/workflows/: build.yml
components/: README.md  esp32-sht3x.patch
components/acc-LIS2DH12TR/: CMakeLists.txt  LIS2DH12TR.c  LIS2DH12TR.h  LIS2DH12TR_core.c  LIS2DH12TR_core.h
components/als-veml7700/: CMakeLists.txt  veml7700.c  veml7700.h
components/app-acc-data-provider/: CMakeLists.txt  acc_data_provider.c  acc_data_provider.h
components/gui/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.spj  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/gui/squareline/project/images/: ui_img_1040270234.c  ui_img_1040273307.c  ui_img_1148992643.c  ui_img_1381129023.c  ui_img_220525951.c  ui_img_360038530.c  ui_img_474709716.c  ui_img_497089268.c  ui_img_backward_png.c  ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_car2_mini_png.c  ui_img_clouds_png.c  ui_img_forward_png.c  ui_img_play_png.c  ui_img_settings_png.c  ui_img_sun_png.c  ui_img_sun_rays_small_cloud_png.c  ui_img_temper_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
components/gui/squareline/project/screens/: ui_Home_Scr.c  ui_scr1.c  ui_scr2.c
config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
main/: CMakeLists.txt  app_main.c  idf_component.yml  initialization.c  initialization.h
scripts/: converter.py  pre-commit-formatter.sh
(+90 files in other folders)
